--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 </head>
 
 <body>
+
+
     <div class="quiz-container">
         <div id="question-container">
             <h3 id="question">Question</h3>
             <div id="answer-buttons"></div>
         </div>
+        <div id="start" class="hide"></div>
+        <button id="start-btn" class="btn hide">Start</button>
         <button id="next-btn" class="btn hide">Next</button>
         <div id="result" class="hide"></div>
         <button id="restart-btn" class="btn hide">Restart</button>
